tests/fixtures/errors/unknown_field_construct.ore
type Point { x:Int, y:Int }

fn main
  p := Point(x: 1, y: 2, z: 3)
  print p
